version/0.16/_sources/api/solver/_autosummary/settings/combusting_particle_child.rst.txt
:orphan:

.. _combusting_particle_child:

combusting_particle_child
=========================

.. autoclass:: ansys.fluent.core.solver.settings_232.combusting_particle_child.combusting_particle_child
    :show-inheritance:

.. rubric:: Attributes

======================================================================   ===================================================

Attribute                                                                                                            Summary

======================================================================   ===================================================
:ref:`name <name_1>`                                                                                           'name' child.

:ref:`chemical_formula <chemical_formula>`                                   Specify the chemical formula for the substance.

:ref:`density <density_4>`                                                                                  'density' child.

:ref:`thermal_conductivity <thermal_conductivity_3>`                                           'thermal_conductivity' child.

:ref:`latent_heat <latent_heat_1>`                                                                      'latent_heat' child.

:ref:`volatile_fraction <volatile_fraction>`                                                      'volatile_fraction' child.

:ref:`combustible_fraction <combustible_fraction>`                                             'combustible_fraction' child.

:ref:`swelling_coefficient <swelling_coefficient>`                                             'swelling_coefficient' child.

:ref:`burn_stoichiometry <burn_stoichiometry>`                                                   'burn_stoichiometry' child.

:ref:`specific_heat <specific_heat_3>`                                                                'specific_heat' child.

:ref:`binary_diffusivity <binary_diffusivity>`                                                   'binary_diffusivity' child.

:ref:`diffusivity_reference_pressure <diffusivity_reference_pressure>`               'diffusivity_reference_pressure' child.

:ref:`vaporization_temperature <vaporization_temperature>`                                 'vaporization_temperature' child.

:ref:`thermophoretic_co <thermophoretic_co>`                                                      'thermophoretic_co' child.

:ref:`burn_hreact <burn_hreact>`                                                                        'burn_hreact' child.

:ref:`burn_hreact_fraction <burn_hreact_fraction>`                                             'burn_hreact_fraction' child.

:ref:`devolatilization_model <devolatilization_model>`                                       'devolatilization_model' child.

:ref:`combustion_model <combustion_model>`                                                         'combustion_model' child.

:ref:`scattering_factor <scattering_factor_1>`                                                    'scattering_factor' child.

:ref:`emissivity <emissivity_1>`                                                                         'emissivity' child.

======================================================================   ===================================================

.. rubric:: Included in:

================================================   ================================

Parent                                                                      Summary

================================================   ================================
:ref:`combusting_particle <combusting_particle>`       'combusting_particle' child.

================================================   ================================

